start on better security policies under viola